<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_exam"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:text="@string/course_name" />

    <!-- 枠 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_layout_frame"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/text_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_start_exam"
            android:textColor="#336b38" />

        <!-- 問題数 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_question_cnt"
                android:textColor="#336b38" />

            <TextView
                android:id="@+id/text_question_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#336b38" />

            <TextView
                android:id="@+id/label_question_count_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_question_count_unit"
                android:textColor="#336b38" />
        </LinearLayout>

        <!-- 制限時間 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_time_limit"
                android:textColor="#336b38" />

            <TextView
                android:id="@+id/text_time_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#336b38" />

            <TextView
                android:id="@+id/label_time_limit_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_time_limit_unit"
                android:textColor="#336b38" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_touch_screen"
            android:textColor="#336b38" />
    </LinearLayout>

    <Button
        android:id="@+id/prev_course_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="コース画面に戻る" />

</LinearLayout>