<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- [ヘッダー]フレーム -->
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:stretchColumns="1" >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <!-- [コース名]テキスト -->
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/txtTitle" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <!-- [現在の設問番号]テキスト -->
            <TextView
                android:id="@+id/txtNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txtNum" />
            <!-- [総設問数]テキスト -->
            <TextView
                android:id="@+id/txtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txtTime" />
        </TableRow>
    </TableLayout>

    <!-- [質問]フレーム -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/linearLayout_swipe"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:background="@drawable/custom_layout_frame"
            android:orientation="vertical" >
            <jp.thinkware.kaiden.app.widget.CustomScrollView
                android:id="@+id/scroll_question"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fillViewport="true"
                android:scrollbars="vertical" >
            <!-- [問題内容]テキスト -->
            <TextView
                android:id="@+id/txtQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#e53d00"
                android:text="問題文－－－－－－－－－－－－－－" />
            </jp.thinkware.kaiden.app.widget.CustomScrollView>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_question_choices"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:background="@drawable/custom_layout_frame"
            android:fadingEdgeLength="2dp"
            android:fillViewport="true"
            android:scrollbars="vertical" >
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chk01"
                    android:textColor="#336b38"
                    android:textSize="14sp" />
                <!-- 区切り線(1) -->
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/desc_devider"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />
                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chk02"
                    android:textColor="#336b38"
                    android:textSize="14sp" />
                <!-- 区切り線(2) -->
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/desc_devider"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />
                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chk03"
                    android:textColor="#336b38"
                    android:textSize="14sp" />
                <!-- 区切り線(3) -->
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/desc_devider"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />
                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chk04"
                    android:textColor="#336b38"
                    android:textSize="14sp" />
                <!-- 区切り線(4) -->
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/desc_devider"
                    android:scaleType="fitXY"
                    android:src="@android:drawable/divider_horizontal_textfield" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3sp" >

        <Button
            android:id="@+id/btnAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="btnAnswer_click"
            android:text="@string/btnAns" />

        <Button
            android:id="@+id/btnSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:onClick="btnSource_click"
            android:text="@string/btnSouc" />

        <Button
            android:id="@+id/btnList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="btnList_click"
            android:text="@string/btnList" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="btnStop_click"
            android:text="@string/btnStop" />
    </LinearLayout>

</LinearLayout>